--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -165,7 +165,7 @@ body {
                     Intelligence Model that uses past data of different things 
                    and needs. It predicts past and future prices and values. Note: Predator can produce wrong assumptions and predictions 
                    kindly observe and act accordingly...</p>
-                   <a href="{{url_for('example')}}" class="btn btn-primary" role="button">Enter Predator</a>
+                   <a href="{{url_for('example',name=name)}}" class="btn btn-primary" role="button">Enter Predator</a>
                </div>
            </div>
             </div>
