--- a/templates/vegetable.html
+++ b/templates/vegetable.html
@@ -5,7 +5,7 @@
 
         </style>
     </head>
-    <body>
+    <body id="main-content">
         <h1 class="text-center">Welcome to Vegetable Prediction</h1>
     </body>
 </html>
