--- a/templates/example.html
+++ b/templates/example.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Price 🔸 Home</title>
+    <title>Predator</title>
    {%include 'bootstrap.html'%}
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -19,6 +19,8 @@
         margin: 0;
         padding: 0;
     }
+    
+
     
     .content {
         padding: 5px;
@@ -109,17 +111,44 @@
                         </div>
                         
                       </div>
-                      <div class="text-center mt-4 lead">
+                      <div class="text-center mt-4 lead" style="padding-top: 15px;">
                         <h4 class="mt-2"><b>Unveiling Predator, Your AI Powered Pricing Prediction System.</b></h4>
                         <p class="text-center lead" style="font-size: 17px;">We Provide accurate predictions to assist consumers and businesses in making informed
                              decisions. Harnessing the power of predictive analytics, Price Star empowers users 
                              to anticipate market fluctuations and optimize their purchasing strategies.</p>
                     </div>
+                    <div class="container" style="position: absolute; top: 70%; ;left: 5%;">
+                        <button type="button" class="btn btn-light btn-lg"><b style="font-size: 16px;">Grocery Prices</b>
+                            <div style="font-size: 12px;">Enter here to see the predictions of Groceries and Vegetables</div>
+                        </button>
+                    </div>
+                    <div class="container" style="position: absolute; top: 70%; ;left: 55%;">
+                         <button type="button" class="btn btn-light btn-lg"><b style="font-size: 16px; ">wheather</b>
+                        <div style="font-size: 12px;">Click here to observe wheather actions and Predictions, more</div>
+                        </button>
+                        </div>
+                        <div class="container" style="position: absolute; top: 80%; ;left: 5%;">
+                        <button type="button" class="btn btn-light btn-lg"><b style="font-size: 16px; ">Stock Prices</b>
+                            <div style="font-size: 12px;">Click here for predictions of prices in market and certain stocks</div>
+                            </button>
+                            </div>
+                            <div class="container" style="position: absolute; top: 80%; ;left: 55%;">
+                            <button type="button" class="btn btn-light btn-lg"><b style="font-size: 16px; ">Healthcare</b>
+                                <div style="font-size: 12px;">Enter here and observe patient flow and Accident predictions...</div>
+                                </button>
+                                
+
+                           
+                    </div>
+                    <div class="mt-4 text-center" style="position: absolute; top: 90%; left: 28%;">
+                    <p class="text-center" style="font-size: 12px;">Disclaimer: Predator is trained based on past data.Data of Present and future may vary...</p>
+                </div>
+                    
                 </div>
             </div>
             <div class="col-md-2 bg-light right-sidebar">
                 <div class="px-3">
-                    <h3 class="mt-2 mb-4">Control Bar</h3>
+                    <h3 class="mt-4 mb-4">Control Bar</h3>
                     <p>Welcome {{name}}</p>
                     <ul id="rightid">
                         <li class="mb-4" >
