--- a/templates/example.html
+++ b/templates/example.html
@@ -124,24 +124,25 @@
                              decisions. Harnessing the power of predictive analytics, Predator empowers users 
                              to anticipate market fluctuations and optimize their purchasing strategies.</p>
                     </div>
+                    
                     <div class="container" style="position: absolute; top: 70%; ;left: 5%;">
                         <button type="button" class="btn btn-light btn-lg"><b style="font-size: 16px;">Grocery Prices</b>
-                            <div style="font-size: 12px;">Enter here to see the predictions of Groceries and Vegetables</div>
+                            <div style="font-size: 12px;">Observe predictions of Groceries and Vegetables accurately...</div>
                         </button>
                     </div>
                     <div class="container" style="position: absolute; top: 70%; ;left: 55%;">
                          <button type="button" class="btn btn-light btn-lg"><b style="font-size: 16px; ">Wheather</b>
-                        <div style="font-size: 12px;">Click here to observe wheather actions and Predictions, more</div>
+                        <div style="font-size: 12px;">Observe wheather actions, Predictions and other nature actions...</div>
                         </button>
                         </div>
                         <div class="container" style="position: absolute; top: 80%; ;left: 5%;">
                         <button type="button" class="btn btn-light btn-lg"><b style="font-size: 16px; ">Stock Prices</b>
-                            <div style="font-size: 12px;">Click here for predictions of prices in market and certain stocks</div>
+                            <div style="font-size: 12px;">Observe predictions of market trends and certain stock Prices</div>
                             </button>
                             </div>
                             <div class="container" style="position: absolute; top: 80%; ;left: 55%;">
                             <button type="button" class="btn btn-light btn-lg"><b style="font-size: 16px; ">Healthcare</b>
-                                <div style="font-size: 12px;">Enter here and observe patient flow and Accident predictions...</div>
+                                <div style="font-size: 12px;">Observe patient flow, Accident predictions and pandemic threats...</div>
                                 </button>
                                 
 
@@ -162,17 +163,20 @@
                             <a href="{{url_for('homepage')}}" class="" style="text-decoration: none; color:black;"> Home</a>
                         </li>
                         <li class="mb-4">
-                            <a href="#" class="" style="text-decoration: none; color:black;">Contact us</a>
-                        
-                        </li>
-                        <li class="mb-4">
-                            <a href="#" class="" style="text-decoration: none; color:black;"> About</a>
-                        
-                        </li>
-                        <li class="mb-4">
                             <a href="#" class="" style="text-decoration: none; color:black;">Careers</a>
         
                         </li>
+                        
+                        <li class="mb-4">
+                            <a href="#" class="" style="text-decoration: none; color:black;">Local Markets</a>
+        
+                        </li>
+                        
+                        <li class="mb-4">
+                            <a href="{{url_for('contactus')}}" class="" style="text-decoration: none; color:black;">Contact us</a>
+                        
+                        </li>
+                        
                         
                           
                     </ul>
