--- a/templates/homenav.html
+++ b/templates/homenav.html
@@ -26,6 +26,9 @@
             <a style="color: antiquewhite;" class="nav-link active" href="#requirements">Local Markets</a>
           </li>
           <li class="nav-item">
+            <a style="color: antiquewhite;" class="nav-link active" href="#">Careers</a>
+          </li>
+          <li class="nav-item">
             <a style="color: antiquewhite;" class="nav-link active" href="contactus">Contact us</a>
           </li>
          </ul>
